# acapella

./: README.md  bun.lockb  package.json  vite.config.js
src/: app.html  hooks.client.ts  load.ts  main.css  reset.css  variables.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: context-menu.svelte  home-category.svelte  list.element.svelte  login.svelte  playing.svelte  prograss-bar.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/albums/: +page.svelte
src/routes/albums/album/: +page.svelte
src/routes/artists/: +page.svelte
src/routes/artists/artist/: +page.svelte
src/routes/login/: +page.svelte
src/routes/radios/: +page.svelte
src/routes/recents/: +page.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/songs/: +page.svelte
src/stores/cast/: store.svelte.ts
src/stores/context-menu/: store.svelte.ts
src/stores/music/: music.ts  store.svelte.ts
src/stores/now-playing/: store.svelte.ts
src/stores/queue/: store.svelte.ts
src/stores/settings/: store.svelte.ts
