[package]
name = "audio"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "audio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-log = "2"

log = "0.4.25"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

mdns = "3.0.0"
cast-sender = "0.2.0"

futures-util = "0.3.31"
once_cell = "1.20.2"
tokio = "1.43.0"

stream-download = "0.14.1"
rodio = "0.20.1"
avfaudio = "0.0.2"
